--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             </div>
             <address>
                 <ul>
-                    <li><img src="images/phone-call_3059446.png"/><b>Number phone:</b> 123321123</li>
-                    <li><img src="images/email_3178158.png"><b>email:</b> tobijas.ch@gmail.com</li>
-                    <li><img src="images/user_456212.png"/><b>date of brithday:</b> 06.06.1997r.</li>
+                    <li class = "address-list"><img class = "address-icon" src="images/phone-call_3059446.png"/><b>Number phone:</b> 123321123</li>
+                    <li class = "address-list"><img class = "address-icon" src="images/email_3178158.png"><b>email:</b> tobijas.ch@gmail.com</li>
+                    <li class = "address-list"><img class = "address-icon" src="images/user_456212.png"/><b>date of brithday:</b> 06.06.1997r.</li>
                 </ul>
             </address>
         </header>
@@ -47,6 +47,14 @@
                     <li>2017 -2021 - during studies: internship at Czatkowice mine, seasonal work on scaffolding in
                     Germany (Multiserwis - Industrial Scaffolding Division)</li>
                     <li>2016 -2017 - Wajnert company, woodworking shop</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Hobbies</h1>
+                <ul>
+                    <li>climbing, trekking, mountains, walking</li>
+                    <li>personal development: soft/hard skills</li>
+                    <li>traveling</li>
                 </ul>
             </section>
         </main>
